feat: Complete Hospital Management System backend implementation
- Implemented authentication & authorization with JWT
- Patient, doctor, department management modules
- Appointment booking with double-booking prevention using optimistic locking
- Medical records, prescriptions, lab management
- Billing and invoicing module with idempotency
- Pharmacy and ward management
- Flyway database migrations
- Comprehensive test suite for critical modules
- Docker & Docker Compose configuration
- OpenAPI/Swagger documentation
- Role-based access control with 7 user roles
- Request/Response DTOs with MapStruct mappers
- Structured logging with MDC request tracing
- Production-ready security configuration
- 67 Java classes across 14+ modules

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>